# ICT397-Lab2

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
lib/: CMakeLists.txt
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  engine.cpp  engine.hpp  example1.hpp  indexcalculator.cpp  indexcalculator.hpp  main.cpp  scene.cpp  scene.hpp  shader.hpp  terrain.cpp  terrain.hpp  texture.cpp  texture.hpp  vertix.hpp
